--- a/ph1.html
+++ b/ph1.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8">
   <title>PigmentCreators</title>
       <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
-
 <body>
   <div>
-  <div style="position:absolute; width:100%;height:100%; margin: 20px;  background: url('ph1.png') no-repeat; background-size: 100%;"> </div>
+  <div style="position:absolute; width:100%;height:100%; background: url('ph1.png') no-repeat; background-size: 100%;"> </div>
   <video autoplay="" data-video="0"></video>
 </div>
   <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
