--- a/spray.html
+++ b/spray.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="css/style.css">
 </head>
 <body scroll="no" style="overflow:hidden;">
-  <div>
+  <div style="overflow:hidden;">
   <div style="position:absolute; width:100%;height:100%;  background: url('spray.png') no-repeat; background-size: 100%;"> </div>
   <video autoplay="" data-video="0"></video>
 </div>
